               slope-intercept representation. Removed slope getters/setters
               in favor of angle getters/setters

- Added distinct version of MuonReco/EventDisplay that do not include a canvas
  automatically. The new version was stripped down and heavily modifed.
- Drafted implementation of EventDisplay tab.

## Changed

- EventDisplay modified to reflect Track.h's switch to angle-intercept 
  representation.
- Plots::nMiss changed to Plots::nTotal, with implementation altered to match
  the semantics.
- EventDisplay::hit_model and EventDisplay::track_model are now local to the
  draw function, and are reset on every draw.
- The EventDisplay used in the EventTab is now stored in DAQData.
- EventDisplay no longer stores a canvas pointer, but now simply accepts a
  canvas pointer into the draw function.

-------------------------------------------------------------------------------

## 2024-04-22

## Summary

- Started event display integration.
    - Residuals Display ...COMPLETE?
    - Efficiency Display...COMPLETE?
    - Event Display     ...PENDING

## Added

- Added tabs for residuals, efficiency, and event displays.
- The error log now displays a short message when there are no errors.
- Added residuals and efficiency plots to Plots.h.
- Populated residuals plots in Plots::binEvents().
- Added hit clustering to EventDecoding::processEvents().
- EventDecoding::processEvents() now sets Event::SetPassCheck() with the result
  of recoUtil::CheckEvent().
- Populated efficiency plots in Plots::binEvents().

## Changed

- Moved tabs into a 'Displays' folder for organization.
- Tab width/height now depend on common variables set in the TabPanel 
  constructor.
- All tabs with canvases now inherit from 'CanvasTab'.
- Closing a tab now opens the tab immediately before the closed tab.
    - TODO: Try opening the most recently viewed tab instead.

## Removed

- MUON_RECO -- Removed unnecessary copy constructor in Event.h/cpp. There's no